--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,14 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CertInstallerNreams"
         mc:Ignorable="d"
-        Title="CertInstaller" Height="450" Width="800">
-    <Grid Margin="10">
-        <StackPanel VerticalAlignment="Center">
-            <Label Content="Caminho do Certificado:" FontWeight="Bold" Height="24" Width="300"/>
-            <TextBox x:Name="CertificatePathTextBox" Margin="0,0,0,10" IsReadOnly="True" Height="24" Width="300"/>
-            <Button x:Name="SelectFileButton" Content="Selecionar Certificado..." Height="30" Margin="0,0,0,10" Click="SelectFileButton_Click" Width="300" />
-            <Button x:Name="InstallButton" Content="Instalar no Windows (para Chrome/Edge)" Height="40" FontWeight="Bold" Click="InstallButton_Click" Width="300"/>
+        Title="CertInstaller" Height="276" Width="494">
+    
+    <Grid Margin="20">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+
+            <TextBlock Text="Instalador do Certificado de Rede" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,20"/>
+
+            <Button x:Name="InstallButton" 
+                Content="Baixar e Instalar Certificado" 
+                Height="50" 
+                Width="250"
+                FontWeight="Bold" 
+                FontSize="14"
+                Click="InstallButton_Click"/>
+
             <Label x:Name="StatusLabel" HorizontalAlignment="Center" Margin="0,20,0,0" FontSize="14"/>
+
         </StackPanel>
     </Grid>
 </Window>
